delete buttons added and collapsable menu fixed

--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -7,6 +7,7 @@
 .nav-link{
   color:white;
 }
-.logoImage{
-  
+.container {
+  display: flex;
+  justify-content: flex-start;
 }
